--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   terraform:
     name: Apply Terraform
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: 📦 Checkout do código
