--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,9 @@ jobs:
         run: terraform init
 
       - name: 📋 Terraform Plan
-        run: terraform plan
+        run: terraform plan \
+          -var="instance_name=homelab-1"
+          -var="vault_token=${{ secrets.VAULT_TOKEN }}"
 
       - name: 🚀 Terraform Apply
         run: terraform apply -auto-approve
