--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
       - name: 📋 Terraform Plan
         run: terraform plan \
           -var="instance_name=homelab-1"
-          -var="vault_token=${{ secrets.VAULT_TOKEN }}"
+          -var="vault_token=$VAULT_TOKEN"
 
       - name: 🚀 Terraform Apply
         run: terraform apply -auto-approve
