--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: 📋 Terraform Plan
         run: terraform plan \
-          -var="instance_name=homelab-1"
+          -var="instance_name=homelab-1" \
           -var="vault_token=$VAULT_TOKEN"
 
       - name: 🚀 Terraform Apply
