--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,9 +67,7 @@ jobs:
         run: terraform init
 
       - name: 📋 Terraform Plan
-        run: terraform plan \
-          -var="instance_name=homelab-1" \
-          -var="vault_token=$VAULT_TOKEN"
+        run: terraform plan -var="instance_name=homelab-1" -var="vault_token=$VAULT_TOKEN"
 
       - name: 🚀 Terraform Apply
         run: terraform apply -auto-approve
