--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,10 +69,14 @@ jobs:
       - name: 📋 Terraform Plan
         run: terraform plan -var="instance_name=homelab-1" -var="vault_token=$VAULT_TOKEN" -var="vault_addr=$VAULT_ADDR"
 
-      - name: ✅ Aprovação Manual
-        uses: hmarr/auto-approve-action@v3
-        if: github.event_name == 'workflow_dispatch'
-
+      - name: ⏸️ Aguarda aprovação manual
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: gaamaro
+          minimum-approvals: 1
+          issue-title: "Aprovar execução do Terraform Apply"
+          issue-body: "Clique em 'Approve' para permitir a execução do Apply no ambiente ${{ github.event.inputs.ambiente }}"
 
       - name: 🚀 Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var="vault_token=$VAULT_TOKEN" -var="vault_addr=$VAULT_ADDR
