--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # 👈 permite execução manual pelo botão no GitHub
+  workflow_dispatch:
     inputs:
       ambiente:
         description: "Ambiente de destino"
@@ -18,9 +18,13 @@ env:
   TF_IN_AUTOMATION: true
 
 jobs:
-  terraform:
-    name: Apply Terraform
+  config:
+    name: 🔧 Configuração do ambiente
     runs-on: self-hosted
+
+    outputs:
+      aws_access_key_id: ${{ steps.export-creds.outputs.aws_access_key_id }}
+      aws_secret_access_key: ${{ steps.export-creds.outputs.aws_secret_access_key }}
 
     steps:
       - name: 📦 Checkout do código
@@ -31,43 +35,80 @@ jobs:
         with:
           terraform_version: 1.5.7
 
-      - name: 🔐 Configura credenciais de ambiente
+      - name: 🔐 Exporta AWS credentials do Vault
+        id: export-creds
         run: |
-          echo "VAULT_ADDR=$VAULT_ADDR" >> $GITHUB_ENV
-          echo "VAULT_TOKEN=$VAULT_TOKEN" >> $GITHUB_ENV
-      
-      - name: 🔐 Exporta AWS credentials do Vault para o ambiente
-        run: |
-          echo "🔎 Buscando credenciais AWS do Vault..."
           CREDS=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
             --request GET \
             $VAULT_ADDR/v1/kv/data/aws)
 
-          export AWS_ACCESS_KEY_ID=$(echo "$CREDS" | jq -r '.data.data.access_key')
-          export AWS_SECRET_ACCESS_KEY=$(echo "$CREDS" | jq -r '.data.data.secret_key')
+          AWS_ACCESS_KEY_ID=$(echo "$CREDS" | jq -r '.data.data.access_key')
+          AWS_SECRET_ACCESS_KEY=$(echo "$CREDS" | jq -r '.data.data.secret_key')
 
-          # Exporta para o GitHub Actions
-          echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" >> $GITHUB_ENV
-          echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY" >> $GITHUB_ENV
+          echo "aws_access_key_id=$AWS_ACCESS_KEY_ID" >> $GITHUB_OUTPUT
+          echo "aws_secret_access_key=$AWS_SECRET_ACCESS_KEY" >> $GITHUB_OUTPUT
 
-          echo "✅ Credenciais carregadas no runner."
+  plan:
+    name: 📋 Terraform Plan
+    runs-on: self-hosted
+    needs: config
 
-      - name: 🧪 leitura das credenciais no Vault
+    steps:
+      - name: 📦 Checkout do código
+        uses: actions/checkout@v3
+
+      - name: 🔐 Configura credenciais e variável VAULT
         run: |
-          echo "🔎 Verificando o conteúdo retornado do Vault..."
-          curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
-            --request GET \
-            $VAULT_ADDR/v1/kv/data/aws | jq
+          echo "VAULT_ADDR=$VAULT_ADDR" >> $GITHUB_ENV
+          echo "VAULT_TOKEN=$VAULT_TOKEN" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ needs.config.outputs.aws_access_key_id }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ needs.config.outputs.aws_secret_access_key }}" >> $GITHUB_ENV
 
-      - name: 🔍 Verificar credenciais carregadas do Vault
-        run: |
-          aws sts get-caller-identity
-
-      - name: ⚙️ Terraform Init com backend S3
+      - name: ⚙️ Terraform Init
         run: terraform init
 
       - name: 📋 Terraform Plan
-        run: terraform plan -var="instance_name=homelab-1" -var="vault_token=$VAULT_TOKEN" -var="vault_addr=$VAULT_ADDR"
+        run: terraform plan -out=tfplan.binary \
+          -var="vault_token=$VAULT_TOKEN" \
+          -var="vault_addr=$VAULT_ADDR"
+
+      - name: 📦 Armazena plano como artefato
+        uses: actions/upload-artifact@v3
+        with:
+          name: tfplan
+          path: tfplan.binary
+
+  approve:
+    name: ✅ Aprovação manual
+    runs-on: ubuntu-latest
+    needs: plan
+    environment:
+      name: homelab
+      url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+    steps:
+      - name: 🛑 Esperando aprovação
+        run: echo "Aguardando aprovação manual para o apply..."
+
+  apply:
+    name: 🚀 Terraform Apply
+    runs-on: self-hosted
+    needs: [plan, approve]
+
+    steps:
+      - name: 📦 Checkout do código
+        uses: actions/checkout@v3
+
+      - name: 📥 Baixa plano
+        uses: actions/download-artifact@v3
+        with:
+          name: tfplan
+
+      - name: 🔐 Configura credenciais e variável VAULT
+        run: |
+          echo "VAULT_ADDR=$VAULT_ADDR" >> $GITHUB_ENV
+          echo "VAULT_TOKEN=$VAULT_TOKEN" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ needs.config.outputs.aws_access_key_id }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ needs.config.outputs.aws_secret_access_key }}" >> $GITHUB_ENV
 
       - name: 🚀 Terraform Apply
-        run: terraform apply -auto-approve -var="vault_token=$VAULT_TOKEN" -var="vault_addr=$VAULT_ADDR
+        run: terraform apply -auto-approve tfplan.binary
