--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,13 +68,11 @@ jobs:
         run: terraform init
 
       - name: 📋 Terraform Plan
-        run: terraform plan -out=tfplan.binary \
-          -var="vault_token=$VAULT_TOKEN" \
-          -var="vault_addr=$VAULT_ADDR"
+        run: terraform plan -out=tfplan.binary -var="vault_token=$VAULT_TOKEN" -var="vault_addr=$VAULT_ADDR"
 
   approve:
     name: ✅ Aprovação manual
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: plan
     environment:
       name: homelab
