--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ env:
   TF_IN_AUTOMATION: true
 
 jobs:
-  terraform:
+  deploy:
     name: 🚀 Deploy EC2 com Terraform
     runs-on: self-hosted
 
@@ -31,33 +31,27 @@ jobs:
         with:
           terraform_version: 1.5.7
 
-      - name: 🔐 Exporta AWS credentials do Vault
-        id: export-creds
+      - name: 🔐 Exporta credenciais do Vault e seta variáveis
         run: |
+          echo "🔑 Lendo AWS credentials do Vault..."
           CREDS=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
             --request GET \
             $VAULT_ADDR/v1/kv/data/aws)
 
-          AWS_ACCESS_KEY_ID=$(echo "$CREDS" | jq -r '.data.data.access_key')
-          AWS_SECRET_ACCESS_KEY=$(echo "$CREDS" | jq -r '.data.data.secret_key')
+          export AWS_ACCESS_KEY_ID=$(echo "$CREDS" | jq -r '.data.data.access_key')
+          export AWS_SECRET_ACCESS_KEY=$(echo "$CREDS" | jq -r '.data.data.secret_key')
 
           echo "AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY" >> $GITHUB_ENV
+          echo "✅ Credenciais setadas com sucesso"
 
       - name: ⚙️ Terraform Init
         run: terraform init
 
       - name: 📋 Terraform Plan
-        run: terraform plan -out=tfplan.binary -var="vault_token=$VAULT_TOKEN" -var="vault_addr=$VAULT_ADDR"
-
-      - name: ✅ Pausa para Aprovação Manual
-        uses: trstringer/manual-approval@v1
-        with:
-          secret: ${{ secrets.GITHUB_TOKEN }}
-          approvers: gabrielamaro
-          minimum-approvals: 1
-          issue-title: "Aprovação do Apply"
-          issue-body: "Clique para aprovar o Terraform Apply no homelab."
+        run: terraform plan -out=/tmp/tfplan.binary \
+          -var="vault_token=$VAULT_TOKEN" \
+          -var="vault_addr=$VAULT_ADDR"
 
       - name: 🚀 Terraform Apply
-        run: terraform apply -auto-approve tfplan.binary
+        run: terraform apply -auto-approve /tmp/tfplan.binary
