--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,9 @@ jobs:
             $VAULT_ADDR/v1/kv/data/ssh-default)
       
           KEY_NAME=$(echo "$VAULT_SSH" | jq -r '.data.data.key_name')
-          PUBLIC_KEY=$(echo "$VAULT_SSH" | jq -r '.data.data.public_key')
+          # Extrai a chave pública do Vault e converte para base64
+          PUBLIC_KEY_RAW=$(echo "$VAULT_SSH" | jq -r '.data.data.public_key')
+          PUBLIC_KEY=$(echo "$PUBLIC_KEY_RAW" | base64 | tr -d '\n')
       
           echo "🔍 Verificando se a chave '$KEY_NAME' já existe na AWS..."
           if aws ec2 describe-key-pairs --key-names "$KEY_NAME" > /dev/null 2>&1; then
