--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -131,14 +131,9 @@ jobs:
 
       - name: 🧰 Instala Ansible
         run: |
-          sudo rm -f /var/lib/apt/lists/lock
-          sudo rm -f /var/cache/apt/archives/lock
-          sudo rm -f /var/lib/dpkg/lock*
-          sudo dpkg --configure -a
+          echo 'tzdata tzdata/Areas select America' | sudo debconf-set-selections
+          echo 'tzdata tzdata/Zones/America select Sao_Paulo' | sudo debconf-set-selections
           sudo apt-get update
-          sudo apt-get install -y tzdata
-          echo "America/Sao_Paulo" | sudo tee /etc/timezone
-          sudo dpkg-reconfigure -f noninteractive tzdata
           sudo apt-get install -y ansible
 
       - name: 🔐 Obtém IP da EC2 e chave SSH do Vault
