--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,7 +111,7 @@ jobs:
       - name: 💾 Salva IP da EC2 no Vault
         run: |
           echo "🔍 Obtendo IP da EC2 do output do Terraform..."
-          EC2_IP=$(terraform output -raw ec2_public_ip)
+          EC2_IP=$(terraform output -raw ec2_public_ip | grep -oE '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')
           echo "📝 IP da EC2: $EC2_IP"
 
           VAULT_PATH="kv/data/ec2-ip"
