--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,21 +110,26 @@ jobs:
 
       - name: 💾 Salva IP da EC2 no Vault
         run: |
-          echo "🔍 Obtendo IP da EC2 do Vault..."
-          VAULT_EC2=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
-            --request GET \
-            $VAULT_ADDR/v1/kv/data/ec2-ip)
-          
-          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip')
+          echo "🔍 Obtendo IP da EC2 do output do Terraform..."
+          EC2_IP=$(terraform output -raw ec2_public_ip | grep -oE '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')
           echo "📝 IP da EC2: $EC2_IP"
 
           VAULT_PATH="kv/data/ec2-ip"
-          echo "💾 Salvando IP no Vault (${VAULT_ADDR}) em ${VAULT_PATH}..."
-          JSON_DATA=$(jq -n --arg ip "$EC2_IP" '{"data": {"ip": $ip}}')
-          curl --header "X-Vault-Token: ${VAULT_TOKEN}" \
-            --request POST \
-            --data "$JSON_DATA" \
-            ${VAULT_ADDR}/v1/${VAULT_PATH}
+          echo "🔍 Verificando se o IP já existe no Vault..."
+          EXISTING_DATA=$(curl -s --header "X-Vault-Token: ${VAULT_TOKEN}" \
+            --request GET \
+            ${VAULT_ADDR}/v1/${VAULT_PATH})
+          
+          if [ "$(echo "$EXISTING_DATA" | jq -r '.data.data.ip')" != "$EC2_IP" ]; then
+            echo "💾 Salvando novo IP no Vault..."
+            JSON_DATA=$(jq -n --arg ip "$EC2_IP" '{"data": {"ip": $ip}}')
+            curl --header "X-Vault-Token: ${VAULT_TOKEN}" \
+              --request POST \
+              --data "$JSON_DATA" \
+              ${VAULT_ADDR}/v1/${VAULT_PATH}
+          else
+            echo "ℹ️ IP já existe no Vault, não é necessário atualizar"
+          fi
 
   install_dynatrace:
     name: 🔄 Instalação do Dynatrace OneAgent
@@ -146,18 +151,26 @@ jobs:
             --request GET \
             $VAULT_ADDR/v1/kv/data/ec2-ip)
           
-          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip')
+          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip' | tr -d '\n\r')
+          if [ -z "$EC2_IP" ]; then
+            echo "❌ Erro: Não foi possível obter o IP da EC2"
+            exit 1
+          fi
           echo "📝 IP da EC2: $EC2_IP"
 
           echo "🔐 Obtendo chave SSH do Vault..."
           VAULT_SSH=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
             --request GET \
             $VAULT_ADDR/v1/kv/data/ssh-default)
-
+          
           PRIVATE_KEY=$(echo "$VAULT_SSH" | jq -r '.data.data.private_key')
+          if [ -z "$PRIVATE_KEY" ]; then
+            echo "❌ Erro: Não foi possível obter a chave SSH"
+            exit 1
+          fi
           echo "$PRIVATE_KEY" > /tmp/ssh_key
           chmod 600 /tmp/ssh_key
-
+          
           echo "🔐 Obtendo credenciais Dynatrace do Vault..."
           VAULT_DT=$(curl -s --header "X-Vault-Token: $VAULT_TOKEN" \
             --request GET \
@@ -166,17 +179,22 @@ jobs:
           DT_ENV=$(echo "$VAULT_DT" | jq -r '.data.data.env')
           DT_TOKEN=$(echo "$VAULT_DT" | jq -r '.data.data.token')
           
+          if [ -z "$DT_ENV" ] || [ -z "$DT_TOKEN" ]; then
+            echo "❌ Erro: Não foi possível obter as credenciais do Dynatrace"
+            exit 1
+          fi
+          
           echo "DYNATRACE_ENV=$DT_ENV" >> $GITHUB_ENV
           echo "DYNATRACE_TOKEN=$DT_TOKEN" >> $GITHUB_ENV
-
+          
           echo "📋 Criando arquivo de inventory..."
           cat > /tmp/inventory.ini << EOF
           [ec2]
           $EC2_IP ansible_ssh_private_key_file=/tmp/ssh_key ansible_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no'
           EOF
-
+          
           echo "🔧 Instalando dependências na máquina remota..."
-          ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@$EC2_IP 'sudo apt-get update && sudo apt-get install -y python3-pip && sudo pip3 install ansible'
+          ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "sudo apt-get update && sudo apt-get install -y python3-pip && sudo pip3 install ansible"
 
       - name: 🚀 Executa playbook do Ansible
         run: ansible-playbook -i /tmp/inventory.ini ansible/oneagent.yaml
