--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -151,11 +151,19 @@ jobs:
             --request GET \
             $VAULT_ADDR/v1/kv/data/ec2-ip)
           
-          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip' | tr -d '\n\r')
+          # Pega apenas o primeiro IP encontrado
+          EC2_IP=$(echo "$VAULT_EC2" | jq -r '.data.data.ip' | head -n1 | tr -d '\n\r')
           if [ -z "$EC2_IP" ]; then
             echo "❌ Erro: Não foi possível obter o IP da EC2"
             exit 1
           fi
+          
+          # Valida se é um IP válido
+          if ! echo "$EC2_IP" | grep -qE '^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$'; then
+            echo "❌ Erro: IP inválido obtido do Vault: $EC2_IP"
+            exit 1
+          fi
+          
           echo "📝 IP da EC2: $EC2_IP"
 
           echo "🔐 Obtendo chave SSH do Vault..."
