--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -204,8 +204,14 @@ jobs:
           echo "🔧 Instalando dependências na máquina remota..."
           ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "sudo apt-get update && sudo apt-get install -y python3-pip python3-venv && python3 -m venv /tmp/ansible-venv && source /tmp/ansible-venv/bin/activate && pip install ansible"
 
+          echo "📁 Copiando arquivo de inventory para a EC2..."
+          scp -i /tmp/ssh_key -o StrictHostKeyChecking=no /tmp/inventory.ini ubuntu@"$EC2_IP":/tmp/inventory.ini
+
+          echo "📁 Copiando playbook do Ansible para a EC2..."
+          scp -i /tmp/ssh_key -o StrictHostKeyChecking=no ansible/oneagent.yaml ubuntu@"$EC2_IP":/tmp/oneagent.yaml
+
       - name: 🚀 Executa playbook do Ansible
-        run: ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "source /tmp/ansible-venv/bin/activate && ansible-playbook -i /tmp/inventory.ini ansible/oneagent.yaml"
+        run: ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "source /tmp/ansible-venv/bin/activate && ansible-playbook -i /tmp/inventory.ini /tmp/oneagent.yaml"
         env:
           DYNATRACE_ENV: ${{ env.DYNATRACE_ENV }}
           DYNATRACE_TOKEN: ${{ env.DYNATRACE_TOKEN }}
