--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -142,7 +142,11 @@ jobs:
 
       - name: 🧰 Instala Ansible
         run: |
-          ansible --version
+          sudo apt-get update
+          sudo apt-get install -y python3-pip python3-venv
+          python3 -m venv /tmp/ansible-venv
+          source /tmp/ansible-venv/bin/activate
+          pip install ansible
 
       - name: 🔐 Obtém IP da EC2 e chave SSH do Vault
         run: |
@@ -200,18 +204,14 @@ jobs:
           [ec2]
           $EC2_IP ansible_ssh_private_key_file=/tmp/ssh_key ansible_user=ubuntu ansible_ssh_common_args='-o StrictHostKeyChecking=no'
           EOF
-          
-          echo "🔧 Instalando dependências na máquina remota..."
+
+          echo "🔧 Normalizando dependências na EC2..."
           ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "sudo apt-get update && sudo apt-get install -y python3-pip python3-venv && python3 -m venv /tmp/ansible-venv && source /tmp/ansible-venv/bin/activate && pip install ansible"
 
-          echo "📁 Copiando arquivo de inventory para a EC2..."
-          scp -i /tmp/ssh_key -o StrictHostKeyChecking=no /tmp/inventory.ini ubuntu@"$EC2_IP":/tmp/inventory.ini
-
-          echo "📁 Copiando playbook do Ansible para a EC2..."
-          scp -i /tmp/ssh_key -o StrictHostKeyChecking=no ansible/oneagent.yaml ubuntu@"$EC2_IP":/tmp/oneagent.yaml
-
       - name: 🚀 Executa playbook do Ansible
-        run: ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "source /tmp/ansible-venv/bin/activate && ansible-playbook -i /tmp/inventory.ini /tmp/oneagent.yaml"
+        run: |
+          source /tmp/ansible-venv/bin/activate
+          ansible-playbook -i /tmp/inventory.ini ansible/oneagent.yaml
         env:
           DYNATRACE_ENV: ${{ env.DYNATRACE_ENV }}
           DYNATRACE_TOKEN: ${{ env.DYNATRACE_TOKEN }}
