--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -202,7 +202,7 @@ jobs:
           EOF
 
           echo "🔧 Normalizando dependências na EC2..."
-          ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "sudo apt-get update && sudo apt-get install -y python3-pip python3-venv python3-setuptools python3-dev build-essential && python3 -m venv /tmp/ansible-venv && source /tmp/ansible-venv/bin/activate && pip install --upgrade pip setuptools wheel && pip install ansible-core ansible"
+          ssh -i /tmp/ssh_key -o StrictHostKeyChecking=no ubuntu@"$EC2_IP" "sudo apt-get update && sudo apt-get install -y software-properties-common && sudo add-apt-repository -y ppa:deadsnakes/ppa && sudo apt-get update && sudo apt-get install -y python3.11 python3.11-dev python3.11-venv python3.11-full && sudo rm -f /usr/bin/python3 && sudo ln -s /usr/bin/python3.11 /usr/bin/python3 && python3 -m venv /tmp/ansible-venv && source /tmp/ansible-venv/bin/activate && pip install --upgrade pip setuptools wheel && pip install ansible-core ansible"
 
       - name: 🚀 Executa playbook do Ansible
         run: ansible-playbook -i /tmp/inventory.ini ansible/oneagent.yaml --extra-vars "dynatrace_env=${{ env.DYNATRACE_ENV }} dynatrace_token=${{ env.DYNATRACE_TOKEN }}"
