Atualiza o Makefile para extrair o TENANT_ID da variável DYNATRACE_ENV e define a URL do Dynatrace, melhorando a verificação das variáveis de ambiente e a clareza do processo de instalação do OneAgent.

--- a/config/Makefile
+++ b/config/Makefile
@@ -1,7 +1,8 @@
 .PHONY: install-oneagent clean
 
 # Variáveis
-DYNATRACE_ENV ?= $(shell echo $$DYNATRACE_ENV | sed 's/apps.dynatrace.com/live.dynatrace.com/')
+TENANT_ID ?= $(shell echo $$DYNATRACE_ENV | grep -o 'ogp[0-9]*')
+DYNATRACE_URL ?= https://$(TENANT_ID).live.dynatrace.com
 DYNATRACE_TOKEN ?= $(shell echo $$DYNATRACE_TOKEN)
 EC2_IP ?= $(shell echo $$EC2_IP)
 SSH_KEY ?= /tmp/ssh_key
@@ -9,21 +10,22 @@ SSH_KEY ?= /tmp/ssh_key
 # Verifica se as variáveis necessárias estão definidas
 check-env:
 	@echo "🔍 Verificando variáveis de ambiente..."
-	@if [ -z "$(DYNATRACE_ENV)" ]; then echo "❌ DYNATRACE_ENV não definido"; exit 1; fi
+	@if [ -z "$(TENANT_ID)" ]; then echo "❌ Não foi possível extrair TENANT_ID do DYNATRACE_ENV"; exit 1; fi
 	@if [ -z "$(DYNATRACE_TOKEN)" ]; then echo "❌ DYNATRACE_TOKEN não definido"; exit 1; fi
 	@if [ -z "$(EC2_IP)" ]; then echo "❌ EC2_IP não definido"; exit 1; fi
 	@if [ ! -f "$(SSH_KEY)" ]; then echo "❌ Chave SSH não encontrada em $(SSH_KEY)"; exit 1; fi
 	@echo "✅ Todas as variáveis de ambiente estão definidas"
-	@echo "📝 DYNATRACE_ENV: $(DYNATRACE_ENV)"
+	@echo "📝 TENANT_ID: $(TENANT_ID)"
+	@echo "📝 DYNATRACE_URL: $(DYNATRACE_URL)"
 	@echo "📝 EC2_IP: $(EC2_IP)"
 
 # Instala o OneAgent
 install-oneagent: check-env
 	@echo "🚀 Iniciando instalação do OneAgent em $(EC2_IP)..."
-	@echo "📥 URL do instalador: $(DYNATRACE_ENV)/api/v1/deployment/installer/agent/unix/default/latest?arch=x86"
+	@echo "📥 URL do instalador: $(DYNATRACE_URL)/api/v1/deployment/installer/agent/unix/default/latest?arch=x86"
 	@ssh -i $(SSH_KEY) -o StrictHostKeyChecking=no ubuntu@$(EC2_IP) "\
 		echo '📥 Baixando instalador do OneAgent...' && \
-		wget -O Dynatrace-OneAgent-Linux-x86-latest.sh '$(DYNATRACE_ENV)/api/v1/deployment/installer/agent/unix/default/latest?arch=x86' \
+		wget -O Dynatrace-OneAgent-Linux-x86-latest.sh '$(DYNATRACE_URL)/api/v1/deployment/installer/agent/unix/default/latest?arch=x86' \
 			--header='Authorization: Api-Token $(DYNATRACE_TOKEN)' && \
 		echo '🔒 Tornando o instalador executável...' && \
 		chmod +x Dynatrace-OneAgent-Linux-x86-latest.sh && \
